@@ -1,4 +1,7 @@
 2016-11-21  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* installcheck/Amanda_Rest_Storages.pl: Fix check
+
+2016-11-21  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* NEWS, ReleaseNotes: 3.4.1
 
 2016-11-18  Jean-Louis Martineau <JMartineau@carbonite.com>
